# BaiYang_Code

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  quickdemo.cpp  quickdemo.h
opencv/: CMakeLists.txt  deleteblack.cpp  single_dataset_argment.cpp
opencv/.cache/clangd/index/: deleteblack.cpp.E7E266B0101B98D4.idx
